initial layout picker implementation - fix preset layout to use node data instead of graphJSON - do not hide graph menu on small screens - users can choose a layout to run using a dropdown

--- a/styles/css/view/tabs/Graph.css
+++ b/styles/css/view/tabs/Graph.css
@@ -15,10 +15,6 @@
 	& .graphMenu {
 		position: relative;
 		z-index: 10;
-
-		@media (--screen-sm) {
-			display: none;
-		}
 	}
 
 	& .graphMenuItem {
